--- a/css/styles.css
+++ b/css/styles.css
@@ -28,17 +28,20 @@ img {
   max-width: 100%;
 }
 .container {
-  width: 1158px;
+  max-width: 320px;
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
   /* padding-left: 15px;
   padding-right: 15px; */
-  padding: 0 15px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 .section {
-  padding-bottom: 120px;
-  padding-top: 120px;
+  padding-bottom: 96px;
+  padding-top: 96px;
+  /* padding-bottom: 120px;
+  padding-top: 120px; */
 }
 .logo-studio {
   color: #2e2f42;
@@ -62,10 +65,11 @@ img {
 }
 .menu-item {
   color: var(--NAVY-BLUE, #2e2f42);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6; /* 116.667% */
+  letter-spacing: 0.48px;
   padding: 24px 0;
   display: block;
   transition-property: color;
@@ -112,16 +116,17 @@ img {
 .main-title {
   color: var(--WHITE, #fff);
   text-align: center;
-  font-size: 56px;
+  /* font-size: 56px; */
+  font-size: 36px;
   font-weight: 700;
   line-height: 1.07;
-  letter-spacing: 1.12px;
-  /* background: var(--NAVY-BLUE, #2e2f42); */
-  max-width: 496px;
+  letter-spacing: 0.72px;
+  max-width: 288px;
   margin-top: 0 auto;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
+  text-align: center;
 }
 .main-button {
   display: block;
@@ -136,7 +141,7 @@ img {
   height: 56px;
   border: none;
   font-weight: 500;
-  line-height: 1.5; /* 150% */
+  line-height: 1.5;
   letter-spacing: 0.64px;
   padding: 16px 32px;
   border-radius: 4px;
@@ -150,19 +155,22 @@ img {
 }
 .advantages-title {
   color: var(--NAVY-BLUE, #2e2f42);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2; /* 120% */
-  letter-spacing: 0.4px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1; /* 120% */
+  letter-spacing: 0.72px;
   margin-bottom: 8px;
+  text-align: center;
 }
 .advantages-text {
   color: var(--SLATE, #434455);
+  font-family: Roboto;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-  width: 264px;
+  width: 288px;
 }
 .team {
   color: var(--NAVY-BLUE, #2e2f42);
@@ -249,11 +257,12 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
   width: 264px;
+  text-align: left;
 }
 .footer {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .section-three {
   background: var(--CLOUD, #f4f4fd);
@@ -265,7 +274,7 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  flex-basis: calc((100% - 72px) / 4);
+  /* width: 100%; */
 }
 .section-two {
   background: #fff;
@@ -273,19 +282,32 @@ img {
 
 .section-one {
   /* background-color: #2e2f42; */
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 72px;
+  padding-bottom: 72px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/backgtoundH.jpg);
+    url(../images/Dark-bg-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1440px;
+  /* max-width: 1440px; */
+  min-width: 320px;
   margin: 0 auto;
 }
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-one {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg-mobile-2x.jpg);
+  }
+}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
@@ -293,21 +315,30 @@ img {
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
   position: sticky;
   top: 0;
-
-  z-index: 999;
+  z-index: 990;
   background: var(--WHITE, #fff);
+
   /* position: fixed; */
+  display: flex;
 }
 
 .advantages-cont {
   display: flex;
+  flex-wrap: wrap;
   background: #fff;
-  gap: 24px;
-  flex-basis: calc((100% - 72px) / 4);
+  gap: 72px;
+
+  /* gap: 24px; */
+  /* flex-basis: calc((100% - 72px) / 4); */
 }
 .header-cont {
   display: flex;
   align-items: center;
+  margin-left: 0;
+  height: 56px;
+}
+.heder-icon {
+  margin: 16px;
 }
 .h-link-cont {
   display: flex;
@@ -317,28 +348,38 @@ img {
   display: flex;
   gap: 40px;
   align-items: center;
+  display: none;
   /* margin-right: 332px; */
 }
 .address-cont {
   display: flex;
   align-items: center;
-  gap: 40px;
+  flex-direction: column;
+  gap: 12px;
+  display: none;
 }
 .team-cont {
-  display: flex;
+  /* display: flex;
   padding-bottom: 0px;
   align-items: center;
-  gap: 24px;
+  gap: 24px; */
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 0px;
+  align-items: center;
+  gap: 72px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 .portfolio-cont {
   display: flex;
-  flex-wrap: wrap;
-  gap: 48px 24px;
+  gap: 48px;
+  flex-direction: column;
 }
 .boarder-img {
   background: var(--WHITE, #fff);
   padding-bottom: 32px 16px;
-  width: calc((100% - 48px) / 3);
+  /* width: calc((100% - 48px) / 3); */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .visually-hidden {
@@ -353,6 +394,9 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+/* .dev-img {
+  margin: 0 auto;
+} */
 
 .tm-pp-cont {
   padding: 32px 0;
@@ -372,10 +416,9 @@ img {
   background: var(--CLOUD, #f4f4fd);
   margin-bottom: 8px;
   border-radius: 4px;
+  display: none;
 }
-.adv-item-cont {
-  flex-basis: calc((100% - 72px) / 4);
-}
+
 .soc-icon {
   fill: #f4f4fd;
 }
@@ -415,12 +458,12 @@ img {
   letter-spacing: 0.32px;
   /* width: 96px; */
   margin-bottom: 16px;
+  text-align: center;
 }
 .cont-footer {
-  display: flex;
-  /* gap: 120px; */
-  /* align-items: center; */
-  /* justify-content: center; */
+  /* display: flex; */
+  /* align-items: center;
+  justify-content: center; */
   align-items: baseline;
 }
 .cont-footer-soc {
@@ -441,6 +484,7 @@ img {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  margin-bottom: 72px;
 }
 .foot-soc-link {
   display: flex;
@@ -487,7 +531,9 @@ img {
   overflow: hidden;
 }
 .cont-foot-log {
-  margin-right: 120px;
+  text-align: center;
+  margin-bottom: 72px;
+  /* margin-right: 120px; */
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 .txt-sub {
@@ -498,18 +544,21 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  text-align: center;
 }
 .footer-form {
-  margin-left: 80px;
+  /* margin-left: 80px; */
 }
 .form-sub {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  justify-content: center;
+  /* gap: 24px; */
 }
 .lab-for-sub {
 }
 .input-sub {
-  width: 264px;
+  width: 288px;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
@@ -520,6 +569,7 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: #ffffff;
+  margin-bottom: 16px;
 }
 .input-sub::placeholder {
   color: var(--WHITE, #fff);
@@ -540,6 +590,7 @@ img {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
+  margin: 0 auto;
 }
 .sub-icon {
   margin-left: 16px;
@@ -554,10 +605,13 @@ img {
   top: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 992;
 }
 .modal {
-  width: 408px;
-  height: 584px;
+  /* width: 408px;
+  height: 584px; */
+  width: 288px;
+  height: 623px;
   border-radius: 4px;
   background: var(--DAIRY, #fcfcfc);
   position: absolute;
@@ -678,6 +732,9 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
 
 .checkbox-txt-link {
@@ -707,6 +764,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  flex-shrink: 0;
 }
 .checkbox-button {
   display: block;
@@ -725,4 +783,356 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
   margin-top: 24px;
+}
+.heder-icon-menu {
+  display: flex;
+  justify-content: end;
+}
+
+/*------!!!!!!!! мобілка!!!!!!!!!!---------- */
+
+.mobile-menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 991;
+  top: 0;
+  left: 0;
+  padding-left: 16px;
+  transform: translateY(-100%);
+  transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is_open {
+  /* transform: translateY(0%); */
+}
+.hed-mob-menu {
+  margin-bottom: 168px;
+  /* margin-bottom: auto; */
+  padding-top: 72px;
+}
+.heder-menu-li {
+  margin-bottom: 40px;
+}
+.mobile_menu_link {
+  font-style: normal;
+  font-size: 36px;
+  line-height: 1.1;
+  font-weight: 700;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  color: rgba(46, 47, 66, 1);
+}
+
+.address-mob {
+  margin-bottom: 48px;
+}
+.add-li-item {
+  color: var(--SLATE, #434455);
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+}
+.active-mob-li {
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.add-mob-li:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mob-icon-cont {
+  display: flex;
+  gap: 40px;
+}
+
+/* ---------------@media--------------------- */
+@media screen and (min-width: 320px) and (max-width: 766px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .container {
+    max-width: 768px;
+  }
+  .advantages-cont {
+    gap: 72px 24px;
+  }
+  .advantages-title {
+    text-align: left;
+  }
+  .advantages-text {
+    width: 356px;
+  }
+  .adv-item-cont {
+    width: calc((100% - 24px) / 2);
+  }
+  .team-list {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+  .team-cont {
+    padding-left: 92px;
+    padding-right: 92px;
+    gap: 64px 24px;
+  }
+  .portfolio-cont {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .boarder-img {
+    width: calc((100% - 24px) / 2);
+  }
+  .cont-footer {
+  }
+  /* .cont-footer {
+    flex-direction: row;
+    flex-wrap: wrap;
+  } */
+  .form-sub {
+  }
+  .cont-foot-log {
+    /* margin-bottom: 0; */
+    text-align: left;
+    margin-bottom: 0;
+  }
+  .txt-sub {
+    text-align: left;
+  }
+  .form-sub {
+    flex-direction: row;
+    justify-content: left;
+    gap: 24px;
+  }
+  .bt-sub {
+    margin: 0;
+  }
+  .cont-footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    padding-left: 108px;
+  }
+  .footer-soc-txt {
+    text-align: left;
+  }
+  .input-sub {
+    width: 264px;
+  }
+  .foot-soc-link-item {
+    margin-bottom: 0;
+  }
+  .section-one {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg-tabl.jpg);
+    padding-top: 112px;
+    padding-bottom: 112px;
+    max-width: 768px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-one {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/Dark-bg-tabl-2x.jpg);
+    }
+  }
+  .main-title {
+    margin-bottom: 36px;
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 1.12px;
+  }
+  .menu-cont {
+    display: flex;
+  }
+  .address-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-left: 121px;
+  }
+  .h-link-cont {
+    padding: 0;
+  }
+  .heder-icon-menu {
+    display: none;
+  }
+  .br-sol {
+    display: none;
+  }
+  .header-cont {
+    margin: 0 auto;
+    height: 72px;
+  }
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
+}
+/* -------------DESKTOP----------------- */
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .section {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+  .advantages-cont {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+  .cont-icons-svg {
+    display: flex;
+  }
+  .advantages-title {
+    text-align: left;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2; /* 120% */
+    letter-spacing: 0.4px;
+  }
+  .advantages-text {
+    width: 264px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .adv-item-cont {
+    width: calc((100% - 72px) / 4);
+  }
+  .team-list {
+    flex-basis: calc((100% - 72px) / 4);
+  }
+  .team-cont {
+    padding: 0;
+    gap: 24px;
+  }
+  .portfolio-cont {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .boarder-img {
+    width: calc((100% - 48px) / 3);
+  }
+  /* .cont-footer {
+    flex-direction: row;
+    align-items: baseline;
+  } */
+  .form-sub {
+    display: flex;
+    /* flex-direction: column; */
+    gap: 24px;
+  }
+  .cont-footer {
+    display: flex;
+  }
+  .cont-foot-log {
+    margin-bottom: 0;
+    text-align: left;
+    margin-right: 120px;
+  }
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .foot-soc-link-item {
+    justify-content: center;
+  }
+  .footer-form {
+    margin-left: 80px;
+    text-align: left;
+  }
+  .footer-soc-txt {
+    text-align: left;
+  }
+  .foot-soc-link-item {
+    justify-content: left;
+    margin-bottom: 0;
+  }
+  .form-sub {
+    flex-direction: row;
+    justify-content: left;
+  }
+  .input-sub {
+    width: 264px;
+  }
+  .txt-sub {
+    text-align: left;
+  }
+  .section-one {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/backgtoundH-pc.jpg);
+    padding-top: 188px;
+    padding-bottom: 188px;
+    max-width: 1440px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-one {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-2x.jpg);
+    }
+  }
+  .main-title {
+    margin-bottom: 48px;
+    max-width: 498px;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 1.12px;
+  }
+  .menu-cont {
+    display: flex;
+  }
+  .address-cont {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+  .h-link-cont {
+    padding: 0;
+    margin-right: auto;
+  }
+  .heder-icon-menu {
+    display: none;
+  }
+  .br-sol {
+    display: none;
+  }
+  .header-cont {
+    margin: 0 auto;
+    height: 72px;
+  }
+  .address-cont {
+    margin-left: 332px;
+  }
+  .menu-item {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+  }
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
 }
