--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,6 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  /* width: 100%; */
 }
 .section-two {
   background: #fff;
@@ -367,6 +366,7 @@ img {
   flex-wrap: wrap;
   padding-bottom: 0px;
   align-items: center;
+  justify-content: center;
   gap: 72px;
   padding-left: 12px;
   padding-right: 12px;
@@ -394,9 +394,10 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/* .dev-img {
-  margin: 0 auto;
-} */
+.dev-img {
+  width: 100%;
+  display: block;
+}
 
 .tm-pp-cont {
   padding: 32px 0;
@@ -802,16 +803,16 @@ img {
   padding-left: 16px;
   transform: translateY(-100%);
   transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 72px;
+  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.is_open {
+.is-open {
   /* transform: translateY(0%); */
 }
-.hed-mob-menu {
-  margin-bottom: 168px;
-  /* margin-bottom: auto; */
-  padding-top: 72px;
-}
-.heder-menu-li {
+.heder-menu-li:not(:last-child) {
   margin-bottom: 40px;
 }
 .mobile_menu_link {
@@ -823,10 +824,12 @@ img {
   text-transform: capitalize;
   color: rgba(46, 47, 66, 1);
 }
-
-.address-mob {
-  margin-bottom: 48px;
+.add-mob-ul {
+  display: inline-flex;
+  flex-direction: column;
+  gap: 24px;
 }
+
 .add-li-item {
   color: var(--SLATE, #434455);
   font-family: Roboto;
@@ -841,11 +844,12 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .add-mob-li:not(:last-child) {
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
 }
 .mob-icon-cont {
   display: flex;
   gap: 40px;
+  margin-top: 48px;
 }
 
 /* ---------------@media--------------------- */
@@ -869,13 +873,18 @@ img {
     width: calc((100% - 24px) / 2);
   }
   .team-list {
-    flex-basis: calc((100% - 24px) / 2);
+    /* width: calc((100% - 24px) / 2); */
   }
   .team-cont {
-    padding-left: 92px;
-    padding-right: 92px;
+    padding: 0;
     gap: 64px 24px;
   }
+  .cont-tab-pep {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .portfolio-cont {
     flex-direction: row;
     flex-wrap: wrap;
@@ -912,7 +921,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 72px 24px;
-    padding-left: 108px;
+    width: 584px;
   }
   .footer-soc-txt {
     text-align: left;
@@ -976,6 +985,12 @@ img {
   .modal {
     width: 408px;
     height: 584px;
+  }
+  .address-item {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.1;
+    letter-spacing: 0.48px;
   }
 }
 /* -------------DESKTOP----------------- */
